--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,13 @@
   "description": "StudyBuddy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.775.0",
     "@aws-sdk/client-ssm": "^3.775.0",
-    "@aws-sdk/lib-dynamodb": "^3.774.0",
-    "@google/genai": "^0.6.1",
-    "@google/generative-ai": "^0.24.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -22,5 +18,12 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.777.0",
+    "@aws-sdk/lib-dynamodb": "^3.777.0",
+    "aws-sdk-client-mock": "^4.1.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   }
 }
